; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/lkdtm/extr_refcount.c_check_zero.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/lkdtm/extr_refcount.c_check_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"Zero detected: saturated\0A\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"Zero detected: unsafely reset to max\0A\00", align 1
@.str.2 = private unnamed_addr constant [55 x i8] c"Still at zero: refcount_inc/add() must not inc-from-0\0A\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"Fail: refcount went crazy: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @check_zero to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_zero(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @refcount_read(i32* %3)
  switch i32 %4, label %11 [
    i32 128, label %5
    i32 129, label %7
    i32 0, label %9
  ]

5:                                                ; preds = %1
  %6 = call i32 @pr_info(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %15

7:                                                ; preds = %1
  %8 = call i32 @pr_warn(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  br label %15

9:                                                ; preds = %1
  %10 = call i32 @pr_warn(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.2, i64 0, i64 0))
  br label %15

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @refcount_read(i32* %12)
  %14 = call i32 @pr_err(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %11, %9, %7, %5
  ret void
}

declare dso_local i32 @refcount_read(i32*) #1

declare dso_local i32 @pr_info(i8*) #1

declare dso_local i32 @pr_warn(i8*) #1

declare dso_local i32 @pr_err(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
